k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flink-statefun-tasks-demo
  labels:
    name: flink-statefun-tasks-demo
