k8s/03-kafka-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-external
  namespace: flink-statefun-tasks-demo
  labels:
    app: kafka
spec:
  type: NodePort
  ports:
    - port: 30092
      targetPort: 30092
      nodePort: 30092
  selector:
    app: kafka
