k8s/05-flink.yaml
apiVersion: v1
kind: Service
metadata:
  name: flink-statefun-jobmanager
  namespace: flink-statefun-tasks-demo
  labels:
      app: flink-statefun
      component: jobmanager
spec:
  ports:
    - name: rpc
      port: 6123
    - name: blob-server
      port: 6124
    - name: webui
      port: 8081
  selector:
      app: flink-statefun
      component: jobmanager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-statefun-jobmanager
  namespace: flink-statefun-tasks-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flink-statefun
      component: jobmanager
  template:
    metadata:
      labels:
        app: flink-statefun
        component: jobmanager
    spec:
      containers:
      - name: jobmanager
        image: fransking/flink-statefun-tasks:3.4.2
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 6123
          - containerPort: 6124
          - containerPort: 8081
        volumeMounts:
          - name: flink-statefun-config-volume
            mountPath: /opt/statefun/modules/tasks/
          - name: flink-config-volume
            mountPath: /opt/flink/conf/config.yaml
            subPath: config.yaml
      volumes:
        - name: flink-statefun-config-volume
          configMap:
            name: flink-statefun-config
            items:
            - key: module.yaml
              path: module.yaml
        - name: flink-config-volume
          configMap:
            name: flink-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-statefun-taskmanager
  namespace: flink-statefun-tasks-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flink-statefun
      component: taskmanager
  template:
    metadata:
      labels:
        app: flink-statefun
        component: taskmanager
    spec:
      containers:
      - name: taskmanager
        image: fransking/flink-statefun-tasks:3.4.2
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 6121
          - containerPort: 6122
        volumeMounts:
          - name: flink-statefun-config-volume
            mountPath: /opt/statefun/modules/tasks/
          - name: flink-config-volume
            mountPath: /opt/flink/conf/config.yaml
            subPath: config.yaml
      volumes:
        - name: flink-statefun-config-volume
          configMap:
            name: flink-statefun-config
            items:
            - key: module.yaml
              path: module.yaml
        - name: flink-config-volume
          configMap:
            name: flink-config
