k8s/07-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-server
  namespace: flink-statefun-tasks-demo
  labels:
      app: demo-app
      component: server
spec:
  #type: NodePort
  ports:
    - name: webui
      port: 8082
  selector:
      app: demo-app
      component: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-server
  namespace: flink-statefun-tasks-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
      component: server
  template:
    metadata:
      labels:
        app: demo-app
        component: server
    spec:
      containers:
      - name: server
        image: fransking/flink-demo-app:3.4.4
        imagePullPolicy: Always
        ports:
          - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-worker
  namespace: flink-statefun-tasks-demo
  labels:
      app: demo-app
      component: worker
spec:
  ports:
    - name: worker-api
      port: 8085
  selector:
      app: demo-app
      component: worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-worker
  namespace: flink-statefun-tasks-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
      component: worker
  template:
    metadata:
      labels:
        app: demo-app
        component: worker
    spec:
      containers:
      - name: worker
        image: fransking/flink-demo-app:3.4.4
        args: ["worker"]
        imagePullPolicy: Always
        ports:
          - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-restricted-worker
  namespace: flink-statefun-tasks-demo
  labels:
      app: demo-app
      component: restricted-worker
spec:
  ports:
    - name: restricted-worker-api
      port: 8085
  selector:
      app: demo-app
      component: restricted-worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-restricted-worker
  namespace: flink-statefun-tasks-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
      component: restricted-worker
  template:
    metadata:
      labels:
        app: demo-app
        component: restricted-worker
    spec:
      containers:
      - name: restricted-worker
        image: fransking/flink-demo-app:3.4.4
        args: ["worker"]
        imagePullPolicy: Always
        ports:
          - containerPort: 8085
