k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-server
  namespace: flink-statefun-tasks-demo
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - flink-tasks-demo.eastus.cloudapp.azure.com
    secretName: tls-secret
  - hosts:
    - flink-demo-az.sbbsystems.com
    secretName: tls-secret2
  - hosts:
    - flink-demo-az.sbbsystems.co.uk
    secretName: tls-secret3
  rules:
    - host: flink-tasks-demo.eastus.cloudapp.azure.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: demo-app-server
              port:
                number: 8082
    - host: flink-demo-az.sbbsystems.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: demo-app-server
              port:
                number: 8082
    - host: flink-demo-az.sbbsystems.co.uk
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: demo-app-server
              port:
                number: 8082
